@@ -73,6 +73,7 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
         self.db = database.Database(cfg.root, cfg.dbPath)
         self.repos = NetworkRepositoryClient(cfg.repositoryMap,
                                              cfg.user,
+                                             cfg.rateLimit,
                                              pwPrompt = passwordPrompter,
                                              localRepository = self.db,
                                              entitlementDir = 
